--- a/lianjie.html
+++ b/lianjie.html
@@ -239,7 +239,7 @@
             </div>
             <div id="title-name" class="title">姓名</div>
             <div id="name"  class="value">
-                张申虎
+                周家恩
         </div>
          <div id="title-college" class="title">照片</div>
              
@@ -267,7 +267,7 @@
             </div>
             <div id="status" class="value" style="margin-top:10px;">允许入校</div>
             <div id="title-id" class="title">学工号</div>
-            <div id="id"   class="value">2021110343</div>
+            <div id="id"   class="value">2021110335</div>
             <div id="title-time" class="title">出入校时间</div>
             <div id="time" class="value">2021-11-07 00:00:00</div>
         <div id="title-college" class="title">学院</div>
